# diffusion-editor

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  conftest.py  install-deps.sh  pyproject.toml  requirements.txt  run.ps1  run.sh
.claude/: CLAUDE.md
.github/workflows/: ci.yml
diffusion_editor/: __init__.py  brush.py  brush_panel.py  canvas.py  diffusion_brush.py  diffusion_engine.py  diffusion_panel.py  document_service.py  editor_canvas.py  editor_window.py  file_dialog.py  gpu_compositor.py  history.py  instruct_engine.py  instruct_panel.py  lama_engine.py  lama_panel.py  layer.py  layer_panel.py  layer_renderer.py  layer_stack.py  main.py  sdk_runtime.py  segmentation.py  settings.py  slider_edit.py
diffusion_editor/app/: __init__.py  application.py  editor_window.py  main.py  presentation.py
diffusion_editor/canvas/: gpu_compositor.py
scripts/: smoke_termin_runtime.py
tests/: test_document_service.py  test_editor_application.py  test_editor_window_poll.py  test_gpu_compositor_runtime.py  test_layer_stack.py  test_sdk_runtime.py
